--- a/code/public/index.html
+++ b/code/public/index.html
@@ -22,7 +22,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Fira+Code:wght@300;400;500;600;700&display=swap"
     rel="stylesheet">
 
-  <title>Technigo React App</title>
+  <title>React App</title>
 </head>
 
 <body>
