--- a/code/public/index.html
+++ b/code/public/index.html
@@ -4,16 +4,21 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <!--
-      Notice the use of %PUBLIC_URL% in the tags above.
-      It will be replaced with the URL of the `public` folder during the build.
-      Only files inside the `public` folder can be referenced from the HTML.
-
-      Unlike "/favicon.ico" or "favicon.ico", "%PUBLIC_URL%/favicon.ico" will
-      work correctly both with client-side routing and a non-root public URL.
-      Learn how to configure a non-root public URL by running `npm run build`.
-    -->
-  <title>Technigo React App</title>
+  <meta property="og:title" content="Julia Nikitina's happy thoughts">
+  <meta property="og:description" content="Send your happy thoughts">
+  <meta property="og:image" content="https://i.ibb.co/KDHXTmP/happy-thoughts.png">
+  <meta property="og:url" content="https://my-happy-happy-thoughts.netlify.app/">
+  <meta name="twitter:card" content="summary_large_image">
+  <meta name="og:site_name" content="Julia Nikitina's happy thoughts">
+  <meta name="twitter:image:alt" content="Send your happy thoughts">
+  <meta name="og:type" content="https://my-happy-happy-thoughts.netlify.app/">
+  <meta name="fb:app_id" content="https://my-happy-happy-thoughts.netlify.app/">
+  <!-- Notice the use of %PUBLIC_URL% in the tags
+    above. It will be replaced with the URL of the `public` folder during the build. Only files inside the `public`
+    folder can be referenced from the HTML. Unlike "/favicon.ico" or "favicon.ico" , "%PUBLIC_URL%/favicon.ico" will
+    work correctly both with client-side routing and a non-root public URL. Learn how to configure a non-root public URL
+    by running `npm run build`. -->
+  <title>Happy thoughts by Julia 💌</title>
 </head>
 
 <body>
