--- a/code/public/index.html
+++ b/code/public/index.html
@@ -13,6 +13,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
+    <link href="https://fonts.googleapis.com/css2?family=Podkova:wght@600&display=swap" rel="stylesheet">
     <title>Happy Thoughts!</title>
     <link rel="icon" href="heart.svg"/>
   </head>
