--- a/code/public/index.html
+++ b/code/public/index.html
@@ -24,7 +24,7 @@
 		<link rel="icon" type="image/png" sizes="16x16" href="./favicon_io/favicon-16x16.png" />
 		<link rel="manifest" href="./favicon_io/site.webmanifest" />
 
-		<title>Happy thoughts</title>
+		<title>Happy Tweets</title>
 	</head>
 
 	<body>
