--- a/code/public/index.html
+++ b/code/public/index.html
@@ -14,6 +14,7 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <title>❤️ Happy Thoughts ❤️</title>
+    <link href="https://fonts.googleapis.com/css2?family=Trispace&display=swap" rel="stylesheet">
   </head>
 
   <body>
