--- a/code/public/index.html
+++ b/code/public/index.html
@@ -13,7 +13,8 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>❤️ Happy Thoughts ❤️</title>
+    <title>Happy Thoughts</title>
+    <link rel="shortcut icon" href="assets/favicon.png" type="image/x-icon">
     <link href="https://fonts.googleapis.com/css2?family=Trispace&display=swap" rel="stylesheet">
   </head>
 
