--- a/code/public/index.html
+++ b/code/public/index.html
@@ -4,6 +4,8 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link rel="shortcut icon" href="./assets/favicon.ico" type="ico">
+
     <!--
       Notice the use of %PUBLIC_URL% in the tags above.
       It will be replaced with the URL of the `public` folder during the build.
@@ -14,7 +16,6 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <title>Happy Thoughts</title>
-    <link rel="shortcut icon" href="./assets/favicon.ico" type="image/x-icon">
     <link href="https://fonts.googleapis.com/css2?family=Trispace&display=swap" rel="stylesheet">
   </head>
 
