--- a/code/public/index.html
+++ b/code/public/index.html
@@ -1,7 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
-
   <head>
+    <link
+      href="https://fonts.googleapis.com/css2?family=Montserrat:wght@500&family=Roboto+Mono:wght@200&display=swap"
+      rel="stylesheet"
+    />
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <!--
@@ -30,5 +33,4 @@
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
   </body>
-
 </html>
