--- a/code/public/index.html
+++ b/code/public/index.html
@@ -15,7 +15,7 @@
     -->
     <link href="https://fonts.googleapis.com/css2?family=Podkova:wght@600&display=swap" rel="stylesheet">
     <title>Happy Thoughts!</title>
-    <link rel="icon" href="heart.svg"/>
+    <link rel="icon" href="./assets/heart.svg"/>
   </head>
 
   <body>
