--- a/code/public/index.html
+++ b/code/public/index.html
@@ -7,16 +7,25 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Trispace:wght@100&display=swap" rel="stylesheet">
-    <!--
-      Notice the use of %PUBLIC_URL% in the tags above.
-      It will be replaced with the URL of the `public` folder during the build.
-      Only files inside the `public` folder can be referenced from the HTML.
+    <!-- Facebook Meta Tags -->
+    <meta property="og:url" content="mattssons-happythoughts.netlify.app">
+    <meta property="og:type" content="website">
+    <meta property="og:title" content="Technigos front-end developer bootcamp">
+    <meta property="og:description" content="Happy thoughts app">
+    <meta property="og:image" content="mattssons-happythoughts.netlify.app./image/og-photo.png">
 
-      Unlike "/favicon.ico" or "favicon.ico", "%PUBLIC_URL%/favicon.ico" will
-      work correctly both with client-side routing and a non-root public URL.
-      Learn how to configure a non-root public URL by running `npm run build`.
-    -->
-    <title>Technigo React App</title>
+    <!-- Twitter Meta Tags -->
+    <meta name="twitter:card" content="summary_large_image">
+    <meta property="twitter:domain" content="mattssons-happythoughts.netlify.app">
+    <meta property="twitter:url" content="mattssons-happythoughts.netlify.app">
+    <meta name="twitter:title" content="Technigos front-end developer bootcamp">
+    <meta name="twitter:description" content="Happy thoughts app">
+    <meta name="twitter:image" content="mattssons-happythoughts.netlify.app./image/og-photo.png">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link rel="stylesheet" href="./style.css"> 
+    <link rel="icon" href="./favicon-16x16.png">
+    <title>Happy thoughts</title>
   </head>
 
   <body>
