--- a/code/public/index.html
+++ b/code/public/index.html
@@ -12,8 +12,7 @@
 
       Unlike " /favicon.ico" or "favicon.ico" , "%PUBLIC_URL%/favicon.ico" will work correctly both with client-side
     routing and a non-root public URL. Learn how to configure a non-root public URL by running `npm run build`. -->
-  <title>Happy by Mamite</title>
-  <!--<img src="../img/heart.png" alt="Heart emoji" className="footer__image" /> -->
+  <title>❤️ by Mamite❤️</title>
 </head>
 
 <body>
