--- a/code/public/index.html
+++ b/code/public/index.html
@@ -13,9 +13,8 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>Technigo React App</title>
-    <!-- <link href=“//db.onlinewebfonts.com/c/3c607a384582ce9e879008881a86351c?family=PrimaSans+BT” rel=“stylesheet”
-      type=“text/css” /> -->
+    <title>Happy Thoughts!</title>
+    
   </head>
 
   <body>
