--- a/code/public/index.html
+++ b/code/public/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <link
-      href="https://fonts.googleapis.com/css2?family=Montserrat:wght@500&family=Roboto+Mono:wght@200&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Montserrat:wght@500&family=Roboto+Mono:wght@200;600;700&display=swap"
       rel="stylesheet"
     />
     <meta charset="utf-8" />
