--- a/code/public/index.html
+++ b/code/public/index.html
@@ -17,7 +17,7 @@
     <meta property="og:title" content="Happy thoughts!">
     <meta property="og:description" content="Your new happy place on the internet. An app done by a Technigo student, built with React.">
     <meta property="og:url" content="#" />
-    <meta property="og:image" content="https://happy-thoughts-maria-petersson.netlify.app/img/happy_thoughts_app.png" />
+    <meta property="og:image" content="https://happy-thoughts-maria-petersson.netlify.app/img/happy-og.png" />
     <title>Happy Thoughts!</title>
     
   </head>
