--- a/code/public/index.html
+++ b/code/public/index.html
@@ -7,15 +7,44 @@
 			href="https://fonts.googleapis.com/css2?family=Bungee+Shade&family=Trispace&display=swap"
 			rel="stylesheet"
 		/>
-		<!--
-      Notice the use of %PUBLIC_URL% in the tags above.
-      It will be replaced with the URL of the `public` folder during the build.
-      Only files inside the `public` folder can be referenced from the HTML.
+		<link rel="icon" href="../src/images/red-heart.png" />
+		<meta
+			name="description"
+			content="Try my survey out - Pick your horror movie"
+		/>
 
-      Unlike "/favicon.ico" or "favicon.ico", "%PUBLIC_URL%/favicon.ico" will
-      work correctly both with client-side routing and a non-root public URL.
-      Learn how to configure a non-root public URL by running `npm run build`.
-    -->
+		<!-- Facebook Meta Tags -->
+		<meta
+			property="og:url"
+			content="https://mt-dotse-happy-thoughts.netlify.app/"
+		/>
+		<meta property="og:type" content="website" />
+		<meta property="og:title" content="Happy Thoughts" />
+		<meta property="og:description" content="Share your Happy Thoughts" />
+		<meta
+			property="og:image"
+			content="https://mt-dotse-happy-thoughts.netlify.app/images/og-img.jpg"
+		/>
+
+		<!-- Twitter Meta Tags -->
+		<meta name="twitter:card" content="summary_large_image" />
+		<meta
+			property="twitter:domain"
+			content="https://mt-dotse-happy-thoughts.netlify.app/"
+		/>
+		<meta
+			property="twitter:url"
+			content="https://mt-dotse-happy-thoughts.netlify.app/"
+		/>
+		<meta
+			name="twitter:title"
+			content="Happy Thoughts - Technigo project by Madelene Trang"
+		/>
+		<meta name="twitter:description" content="Share your happy thoughts" />
+		<meta
+			name="twitter:image"
+			content="https://mt-dotse-happy-thoughts.netlify.app/images/og-img.jpg"
+		/>
 		<title>Happy Thoughts</title>
 	</head>
 
