--- a/code/public/index.html
+++ b/code/public/index.html
@@ -16,7 +16,10 @@
 		/>
 		<meta property="og:type" content="website" />
 		<meta property="og:title" content="Happy Thoughts" />
-		<meta property="og:description" content="Share your Happy Thoughts" />
+		<meta
+			property="og:description"
+			content="A happy place on the internet, share your Happy Thoughts"
+		/>
 		<meta
 			property="og:image"
 			content="https://mt-dotse-happy-thoughts.netlify.app/assets/og-img.jpg"
