--- a/code/public/index.html
+++ b/code/public/index.html
@@ -7,7 +7,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=Trispace&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Lobster&family=Trispace&display=swap"
       rel="stylesheet"
     />
 
