--- a/code/public/index.html
+++ b/code/public/index.html
@@ -1,9 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <link rel="shortcut icon" href="faaaave.png" type="image/x-icon" />
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta property="og:title" content="Annas's Happy Thoughts" />
+    <meta
+      property="og:description"
+      content="The project is a more positive version of Twitter that fetches and posts Happy Thoughts from an API."
+    />
+    <meta property="og:type" content="website" />
+    <meta
+      property="og:url"
+      content="https://anna-happy-thoughts.netlify.app/"
+    />
+    <meta
+      property="og:image"
+      content="https://anna-happy-thoughts.netlify.app/image/og-happy-thoughts.png"
+    />
     <!--
       Notice the use of %PUBLIC_URL% in the tags above.
       It will be replaced with the URL of the `public` folder during the build.
