--- a/code/public/index.html
+++ b/code/public/index.html
@@ -15,6 +15,7 @@
       property="og:image"
       content="https://anna-happy-thoughts.netlify.app/image/og-happy-thoughts.png"
     />
+    <link rel="shortcut icon" href="faaaave.png" type="image/x-icon" />
     <!--
       Notice the use of %PUBLIC_URL% in the tags above.
       It will be replaced with the URL of the `public` folder during the build.
