--- a/code/public/index.html
+++ b/code/public/index.html
@@ -15,6 +15,7 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <title>Happy Thoughts App</title>
+		<link rel="shortcut icon" href="assets/heart.png" type="image/x-icon">
   </head>
 
   <body>
