--- a/code/public/index.html
+++ b/code/public/index.html
@@ -13,6 +13,18 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
+    <!-- Meta/og tags -->
+    <meta property="og:title" content="Happy Thoughts" />
+    <meta
+      property="og:url"
+      content="https://carling-happy-thoughts.netlify.app/"
+    />
+    <meta
+      property="og:image"
+      content="https://carling-happy-thoughts.netlify.app/frontpage.png"
+    />
+    <meta property="og:description" content="What are you happy about today?" />
+    <meta property="og:type" content="website" />
     <title>Happy Thoughts</title>
   </head>
 
