--- a/code/public/index.html
+++ b/code/public/index.html
@@ -7,7 +7,51 @@
       href="https://fonts.googleapis.com/css2?family=Trispace:wght@100;300;400&display=swap"
       rel="stylesheet"
     />
-    <!--
+    <meta name="description" content="Share your happy thoughts" />
+
+    <!-- Facebook Meta Tags -->
+    <meta
+      property="og:url"
+      content="https://my-happy-thoughts-place.netlify.app/"
+    />
+    <meta property="og:type" content="website" />
+    <meta
+      property="og:title"
+      content="Happy Thoughts - Technigo project by Fatima Gamero Romero"
+    />
+    <meta
+      property="og:description"
+      content="A happy place on the internet built with React. Share your happy thoughts!"
+    />
+    <meta
+      property="og:image"
+      content="https://my-happy-thoughts-place.netlify.app/assets/screenshot.png"
+    />
+
+    <!-- Twitter Meta Tags -->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta
+      property="twitter:domain"
+      content="https://my-happy-thoughts-place.netlify.app/"
+    />
+    <meta property="twitter:url"
+    content="https://my-happy-thoughts-place.netlify.app/ />
+    <meta
+      name="twitter:title"
+      content="Happy Thoughts - Technigo project by Fatima Gamero Romero"
+    />
+    <meta
+      name="twitter:description"
+      content="A happy place on the internet built with React. Share your happy thoughts!"
+    />
+    <meta
+      name="twitter:image"
+      content="https://my-happy-thoughts-place.netlify.app/assets/screenshot.png"
+    />
+    <title>Happy Thoughts</title>
+  </head>
+
+  <!--
       Notice the use of %PUBLIC_URL% in the tags above.
       It will be replaced with the URL of the `public` folder during the build.
       Only files inside the `public` folder can be referenced from the HTML.
@@ -16,8 +60,6 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>Technigo React App</title>
-  </head>
 
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
