--- a/code/public/index.html
+++ b/code/public/index.html
@@ -29,10 +29,10 @@
     />
 
     <!-- Twitter Meta Tags -->
-    <!-- <meta name="twitter:card" content="summary_large_image" />
+     <meta name="twitter:card" content="summary_large_image" />
     <meta
       property="twitter:domain"
-      content="https://my-happy-thoughts-place.netlify.app/"
+      content="https://my-happy-thoughts-place.netlify.app"
     />
     <meta property="twitter:url"
     content="https://my-happy-thoughts-place.netlify.app/">
@@ -47,7 +47,7 @@
     <meta
       name="twitter:image"
       content="https://my-happy-thoughts-place.netlify.app/image/screenshot.png"
-    /> -->
+    /> 
     <title>Happy Thoughts</title>
   </head>
 
